# convoy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: GUARDRAILS.md  README.md  backlog.md
docs/adr/: 0001-functional-core-imperative-shell.md  0002-deterministic-gate-is-the-sole-merge-arbiter.md  0003-append-only-versioned-telemetry.md  0004-credential-only-config-isolation.md  0005-series-global-governance.md  0006-feedback-local-backlog-tracked.md  0007-per-pr-governance-overrides.md  README.md
docs/design/: 00-overview.md  01-gate.md  02-formats.md
docs/feedback/: .gitignore  2026-07-04-plugin-serving-blind-probe.md  2026-07-05-fathom-series-conformance-audit.md  2026-07-05-polish-convoy-engine.md  2026-07-05-tu-deprecate-prpilot-convoy-design.md  2026-07-05-tu-v16-wsb-w1-first-production-series.md  2026-07-06-triage-campaign-close-tail.md  2026-07-06-tu-backlog-build-round.md  2026-07-06-tu-v16-campaign-close-tail.md  2026-07-06-tu-v16-overnight-p4-fleet.md  INDEX.md  TRIAGE-2026-07-06.md
docs/plans/: v1-build-plan.md
skills/convoy/: SKILL.md
src/convoy/: __init__.py
src/convoy/core/: __init__.py  dag.py  gate.py  governance.py  preflight.py  pricing.py  spec.py  telemetry.py
src/convoy/interface/: __init__.py  cli.py  config_isolation.py  fs_probe.py  gate_runner.py  git.py  headless_spawn.py  preflight_probe.py  proc.py  reporter.py  run_service.py  scaffold.py  seat_probe.py  spawn.py  streams.py  telemetry_writer.py  workspace_lock.py
src/convoy/interface/drivers/: __init__.py  headless.py
src/convoy/interface/mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_architecture.py  test_cli.py  test_config_isolation.py  test_dag.py  test_fs_probe.py  test_gate.py  test_gate_runner.py  test_git.py  test_governance.py  test_headless_driver.py  test_headless_spawn.py  test_manifest.py  test_mcp_server.py  test_mcp_stdio_integration.py  test_preflight.py  test_preflight_probe.py  test_pricing.py  test_proc.py  test_reporter.py  test_run_service.py  test_scaffold.py  test_seat_probe.py  test_smoke.py  test_spawn.py  test_spec.py  test_streams.py  test_telemetry.py  test_workspace_lock.py
