[project]
name = 'convoy-engine'
version = '0.1.1'
description = 'Governed, measurable multi-PR execution engine.'
readme = 'README.md'
requires-python = '>=3.14'
license = 'Apache-2.0'
license-files = ['LICENSE', 'NOTICE']
authors = [{ name = 'Grimaldo Stanzani' }]
keywords = ['coding-agents', 'automation', 'orchestration', 'quality-gates', 'telemetry']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Quality Assurance',
]
dependencies = [
    'typer>=0.12',
    'tomli-w>=1.0',
    'mcp>=1.28.1',
]

[project.urls]
Repository = 'https://github.com/grimaldost/convoy'
Changelog = 'https://github.com/grimaldost/convoy/blob/main/CHANGELOG.md'
Issues = 'https://github.com/grimaldost/convoy/issues'

[project.scripts]
convoy = 'convoy.interface.cli:main'
cvy = 'convoy.interface.cli:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/convoy']

[dependency-groups]
dev = [
    { include-group = 'lint' },
    { include-group = 'test' },
]
lint = [
    'ruff>=0.15',
    'ty',
]
test = [
    'pytest>=8.0',
    'hypothesis>=6.0',
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'N', 'UP', 'B', 'SIM', 'PLW1514']
# PLW1514 (unspecified-encoding) guards the Windows locale-decode class: a bare
# read_text()/open() defaults to cp1252 on win32 and crashes on agent-produced UTF-8.
# It is preview-only, so preview is enabled restricted to explicitly named rules.
preview = true
explicit-preview-rules = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'double'

[tool.ruff.lint.isort]
known-first-party = ['convoy']

[tool.ruff.lint.flake8-bugbear]
# typer's Argument lives in a parameter default by design (as the already-exempt
# typer.Option does); treat it as immutable so B008 does not flag the typer idiom.
extend-immutable-calls = ['typer.Argument']

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '-q'
